<resources>
    <string name="app_name">Team Manager</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="add">add</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="team_description">Team Description</string>
    <string name="team_name">Team Name</string>
    <string name="test">test</string>
    <string name="logout">logout</string>
</resources>
