<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.brianmote.teammanager.Activities.CreateTeamActivity"
    tools:showIn="@layout/activity_create_team">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTeamName"
        android:hint="@string/team_name"
        android:inputType="textShortMessage"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTeamGame"
        android:layout_below="@+id/createTeamName"
        android:spinnerMode="dialog"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTeamRank"
        android:layout_below="@id/createTeamGame"
        android:spinnerMode="dialog"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createTeamDescription"
        android:layout_below="@+id/createTeamRank"
        android:hint="@string/team_description"
        android:minLines="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createBtn"
        android:layout_below="@+id/createTeamDescription"
        android:layout_alignParentEnd="true"
        android:text="@string/submit"/>

</RelativeLayout>
